--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'web.arachne'
-version '1.0-SNAPSHOT'
+version '1.0.1-SNAPSHOT'
 
 repositories {
   mavenCentral()
@@ -61,7 +61,7 @@ test {
 }
 
 jlink {
-  imageZip = project.file("${buildDir}/distributions/corru-dither.zip")
+  imageZip = project.file("${buildDir}/distributions/corru-dither-<$version>.zip")
   options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
   launcher {
     name = 'corru-dither'
